# JHU-Cornell_hierarchSIR

./: .gitignore  HIERARCHSIR_conda-env.yml  HOPKINSIDD-HIERARCHSIR_conda-env.yml  JHU-ROCKFISH_README.md  Project.toml  README.md  TWALLEMA-HIERARCHSIR_conda-env.yml  hierarchSIR_env.yml  pyproject.toml  setup.py  training.jl
.github/workflows/: automated_data_collection.yml  automated_data_collection_consolidated.yml  automated_data_collection_preliminary.yml  fetch-consolidated_NHSN_HRD.yml  fetch-preliminary_NHSN_HRD.yml  run-forecasts.yml  run-unit_tests.yml  unit_tests.yml
data/: README.md
data/conversion/: build-demography.py  format_thermal-comfort-indices.py
scripts/: calibrate_incremental-SIR_oneStrain.py  calibrate_incremental.py  hierarchical_training-SIR_oneStrain.py  hierarchical_training.py  immunity-linking-statistical-analysis.ipynb  incremental_calibration.py  simulate_model.py  tryout-lognormal-distribution.ipynb
scripts/code/: hierarchical_training.py  incremental_calibration.py  incremental_forecasting.py  submit_forecast.sh  submit_job.sh
scripts/julia/: interpretation.jl  training.jl
scripts/manuscript/: 2024-11-23-JHU_IDD-hierarchSIM.csv  compute-accuracy_leave-one-out.py  compute-accuracy_size-training-dataset.py  compute_accuracy.py  immunity-linking-statistical-analysis.ipynb  optimize_run-baselineModels.py  tryout-copula.ipynb  update_202508xx.pptx  update_202509xx.pptx  visualise_NC_data.ipynb  (+1 more)
scripts/operational/: forecast.py  (+8 more)
src/: HierarchicalSIR.jl  hierarchicalSIR.jl  models.jl  postprocess.jl  util.jl
test/: minimal_lpp.py
(+106 files in other folders)
